CRUD de mantenimiento bicicletas ya funciona al 100, falta listar los mantenimientos en la tabla. Optimizar codigo aladiendo daos.

--- a/MyBici2/src/vista/VistaPrincipal.form
+++ b/MyBici2/src/vista/VistaPrincipal.form
@@ -83,12 +83,12 @@
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="itemTrabajos">
+            <MenuItem class="javax.swing.JMenuItem" name="ItemTMantenimiento">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Mantenimiento Taller"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="itemTrabajosActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ItemTMantenimientoActionPerformed"/>
               </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
